--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
       "Pangolinkeys\\TestFramework\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Pangolinkeys\\TestFramework\\Tests\\": "tests/"
+    }
+  },
   "authors": [
     {
       "name": "pangolinkeys",
